--- a/src/Web/WebMVC/WebMVC.csproj
+++ b/src/Web/WebMVC/WebMVC.csproj
@@ -36,6 +36,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\BuildingBlocks\EventBus\Contracts\Contracts.csproj" />
+	  <ProjectReference Include="..\..\BuildingBlocks\EventBus\DTOs\DTOs.csproj" />
 	  <ProjectReference Include="..\..\Services\Catalog\Catalog.Domain\Catalog.Domain.csproj" />
 	</ItemGroup>
 
