--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -38,6 +38,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\BuildingBlocks\EventBus\Contracts\Contracts.csproj" />
 	  <ProjectReference Include="..\..\..\BuildingBlocks\EventBus\DTOs\DTOs.csproj" />
+	  <ProjectReference Include="..\..\..\BuildingBlocks\EventBus\IntegrationEvents\IntegrationEvents.csproj" />
 	  <ProjectReference Include="..\..\..\BuildingBlocks\WebHost.Customization\WebHost.Customization.csproj" />
 	  <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj" />
 	</ItemGroup>
