--- a/src/Web/WebMVC/WebMVC.csproj
+++ b/src/Web/WebMVC/WebMVC.csproj
@@ -38,6 +38,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\BuildingBlocks\EventBus\Contracts\Contracts.csproj" />
 	  <ProjectReference Include="..\..\BuildingBlocks\EventBus\DTOs\DTOs.csproj" />
+	  <ProjectReference Include="..\..\BuildingBlocks\EventBus\IntegrationEvents\IntegrationEvents.csproj" />
 	  <ProjectReference Include="..\..\Services\Catalog\Catalog.Domain\Catalog.Domain.csproj" />
 	</ItemGroup>
 
