--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -33,6 +33,7 @@
 		<PackageReference Include="MassTransit" Version="7.2.1" />
 		<PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="7.2.1" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.5.1" />
 	</ItemGroup>
 
 	<ItemGroup>
